@@ -41,6 +41,7 @@ Developers
 #include "dispersionModel.H"
 #include "sourceEventFile.H"
 #include "outputEventFile.H"
+#include "patchEventFile.H"
 
 // * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * //
 using namespace Foam;
@@ -68,6 +69,7 @@ int main(int argc, char *argv[])
         if (outputEventIsPresent) outputEvent.update(runTime.timeOutputValue());
         if (eventIsPresent_water)  event_water.update(runTime.timeOutputValue());
         if (eventIsPresent_tracer) event_tracer.update(runTime.timeOutputValue());
+        if (patchEventIsPresent) forAll(patchEventList,patchEventi) patchEventList[patchEventi]->update(runTime.timeOutputValue());
         #include "setDeltaT.H"
 
         runTime++;
