@@ -67,7 +67,7 @@ int main(int argc, char *argv[])
     {
         if (outputEventIsPresent) outputEvent.update(runTime.timeOutputValue());
         if (sourceEventIsPresent) sourceEvent.update(runTime.timeOutputValue());
-        if (patchEventIsPresent) patchEvent.update(runTime.timeOutputValue());
+        if (patchEventIsPresent) forAll(patchEventList,patchEventi) patchEventList[patchEventi]->update(runTime.timeOutputValue());
         #include "setDeltaT.H"
 
         runTime++;
