@@ -57,4 +57,6 @@ maxDeltaT       1e8;
 
 CSVoutput       true;
 
+eventTimeTracking true;
+
 // ************************************************************************* //
